--- a/index.html
+++ b/index.html
@@ -1,10 +1,92 @@
 <!DOCTYPE html>
-<html lang="da">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Pilotside</title>
+    <link rel="stylesheet" href="stylesheet.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Min Passion</h1>
+      <h2>Beklædningsdesigner</h2>
+    </header>
+    <main>
+      <section>
+        <article>
+          <div class="portrait">
+            <div class="caroline">
+              <img src="img/portrait.webp" alt="portrait" />
+            </div>
+            <h3>Carloline</h3>
+            <p>
+              Caroline er studere på Margreteskolen for at blive
+              beklædningsdesigner
+            </p>
+          </div>
+        </article>
+      </section>
+      <section>
+        <article>
+          <div class="youtube">
+            <h3>Inteview med Caroline</h3>
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/KPDoevGey3U"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </article>
+      </section>
+      <section>
+        <article>
+          <div class="studie">
+            <div>
+              <h3>Studie</h3>
+              <p>
+                Dette er studiet Caroline benytter sig af til at skabe sine
+                kreationer. Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Doloribus non delectus, laborum rerum animi perspiciatis
+                temporibus doloremque distinctio quos, aperiam quas porro
+                architecto deserunt reiciendis dolore obcaecati ducimus cumque!
+                Assumenda.
+              </p>
+            </div>
+            <div>
+              <img src="img/to_symaskiner.webp" alt="to_symaskiner" />
+            </div>
+          </div>
+        </article>
+      </section>
+      <section>
+        <article>
+          <div class="video">
+            <h3>Inteview med Caroline</h3>
+            <video
+              controls
+              src="https://mariusdesign.dk/kea/05_indhold/01_pilotvideo/pilotvideo.mp4"
+            ></video>
+          </div>
+        </article>
+      </section>
+      <section>
+        <article>
+          <div class="gallery">
+            <h3>Billde Gallery af Studiet</h3>
+            <div class="billede">
+              <img src="img/cykel.webp" alt="cykel" />
+              <img src="img/foran_bygning.webp" alt="foran_bygning" />
+              <img src="img/symaskiner.webp" alt="symaskiner" />
+            </div>
+          </div>
+        </article>
+      </section>
+    </main>
+    <footer>Marius Ewers</footer>
+  </body>
 </html>
